Use some JDK 17 features and fix deprecations